--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
-# Python-generated files
-__pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
+# Please do not use this ignore file to define platform specific files.
+#
+# For these purposes create a global .gitignore file, which is a list of rules
+# for ignoring files in every Git repository on your workstation.
+#
+# https://help.github.com/articles/ignoring-files/#create-a-global-gitignore
 
-# Virtual environments
-.venv
+# Virtual Environments.
+/.venv
+
+# Application compose environment variables
+.env
+
+# Ruff cache
+/.ruff_cache
+
+# Prettier Hook
+/node_modules
+
+# Pytest cache
+.pytest_cache
+
+# Python cache.
+__pycache__
+*.py[cod]
