--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DB_NAME=cityhive
 DB_USER=cityhive
 DB_PASSWORD=cityhive
+
+# Use 'dialect[+driver]://user:password@host/dbname[?key=value..]' form.
+#
+# For example:
+# DATABASE_URI=postgresql://user:secret@127.0.0.1:5432/db
+DATABASE_URI=postgresql://cityhive:cityhive@cityhive:5432/cityhive
