--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "aiohttp[speedups]>=3.12.7",
     "alembic[tz]>=1.16.1",
     "asyncpg>=0.30.0",
+    "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.41",
     "trafaret-config>=2.0.2",
