--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ DB_PASSWORD=cityhive
 #
 # For example:
 # DATABASE_URI=postgresql://user:secret@127.0.0.1:5432/db
-DATABASE_URI=postgresql://cityhive:cityhive@cityhive:5432/cityhive
+DATABASE_URI=postgresql+asyncpg://cityhive:cityhive@cityhive:5432/cityhive
