--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ name: cityhive
 
 services:
   cityhive_db:
-    image: postgres:16
+    image: ghcr.io/cloudnative-pg/postgis:16-3.4
+    platform: linux/amd64
     container_name: cityhive_db
+    restart: unless-stopped
     environment:
       POSTGRES_DB: ${DB_NAME:-cityhive}
       POSTGRES_USER: ${DB_USER:-cityhive}
       POSTGRES_PASSWORD: ${DB_PASSWORD:-cityhive}
-    mem_limit: 128M
+    mem_limit: 256M
     ports:
       - "127.0.0.1:5432:5432"
     networks:
@@ -16,17 +18,17 @@ services:
         aliases:
           - cityhive-db
     volumes:
-      - cityhive_db:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-cityhive} -d ${DB_PASSWORD:-cityhive}" ]
+      test: [ "CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}" ]
       interval: 5s
       timeout: 10s
-      retries: 10
+      retries: 5
 
 networks:
   cityhive:
     driver: bridge
 
 volumes:
-  cityhive_db:
+  pgdata:
     driver: local
