Add Hive model with PostGIS location

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "aiohttp[speedups]>=3.12.7",
     "alembic[tz]>=1.16.1",
     "asyncpg>=0.30.0",
+    "geoalchemy2>=0.17.1",
+    "pydantic>=2.11.5",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.41",
