Add configuration management module for CityHive application

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
-DB_NAME=cityhive
-DB_USER=cityhive
-DB_PASSWORD=cityhive
+# CityHive Configuration Example
+# Copy this file to .env and modify the values as needed
 
+# HTTP Server Configuration
+APP_HOST=127.0.0.1
+APP_PORT=8080
+
+# Application Environment
+# Options: development, production, testing
+APP_ENV=development
+
+# Database Configuration
+DB_POOL_SIZE=5
+DB_POOL_OVERFLOW=10
+
+# Database connection URI
 # Use 'dialect[+driver]://user:password@host/dbname[?key=value..]' form.
 #
 # For example:
 # DATABASE_URI=postgresql://user:secret@127.0.0.1:5432/db
-DATABASE_URI=postgresql+asyncpg://cityhive:cityhive@cityhive:5432/cityhive
+DATABASE_URI=postgresql+asyncpg://cityhive:cityhive@localhost:5432/cityhive
