--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     container_name: cityhive_db
     restart: unless-stopped
     environment:
-      POSTGRES_DB: ${DB_NAME:-cityhive}
-      POSTGRES_USER: ${DB_USER:-cityhive}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-cityhive}
+      POSTGRES_DB: cityhive
+      POSTGRES_USER: cityhive
+      POSTGRES_PASSWORD: cityhive
     mem_limit: 256M
     ports:
       - "127.0.0.1:5432:5432"
