--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,10 @@ testing = [
 addopts = "--verbose --durations=25 --no-header"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+]
 filterwarnings = [
     "ignore:cannot collect test class.*because it has a __init__ constructor:pytest.PytestCollectionWarning",
 ]
