--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,6 @@
 APP_HOST=127.0.0.1
 APP_PORT=8080
 
-# Application Environment
-# Options: development, production, testing
-APP_ENV=development
-
 # Database Configuration
 DB_POOL_SIZE=5
 DB_POOL_OVERFLOW=10
@@ -18,4 +14,4 @@ DB_POOL_OVERFLOW=10
 #
 # For example:
 # DATABASE_URI=postgresql://user:secret@127.0.0.1:5432/db
-DATABASE_URI=postgresql+asyncpg://cityhive:cityhive@localhost:5432/cityhive
+DATABASE_URI=postgresql+asyncpg://cityhive:cityhive@cityhive-db:5432/cityhive
