--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,26 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "cityhive"
 version = "0.1.0"
 description = "Experimental aiohttp microservice for urban beehive management and technology exploration."
 readme = "README.md"
-requires-python = ">=3.12"
+license = { file = "LICENSE" }
+requires-python = ">=3.12, <4"
+authors = [{ name = "Serghei Iakovlev", email = "oss@serghei.pl" }]
+maintainers = [{ name = "Serghei Iakovlev", email = "oss@serghei.pl" }]
+
+# Keep these dependencies in sorted alphabetical order
 dependencies = [
     "aiohttp-jinja2>=1.6",
     "aiohttp[speedups]>=3.12.7",
     "alembic[tz]>=1.16.1",
     "asyncpg>=0.30.0",
     "geoalchemy2>=0.17.1",
-    "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
+    "pydantic>=2.11.5",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.41",
@@ -27,11 +36,14 @@ dev = [
 ]
 testing = [
     "coverage[toml]>=7.8.2",
-    "pytest>=8.4.0",
     "pytest-aiohttp>=1.1.0",
     "pytest-asyncio>=1.0.0",
     "pytest-mock>=3.14.1",
+    "pytest>=8.4.0",
 ]
+
+[tool.uv]
+package = false
 
 [tool.pytest.ini_options]
 addopts = "--verbose --durations=25 --no-header"
@@ -87,10 +99,14 @@ source = ["cityhive"]
 omit = [
     "__init__.py",
     "*/__pycache__/*",
+    "*/.pytest_cache/*",
+    "*/.ruff_cache/*",
     "*/.venv/*",
     "*/build/*",
     "*/coverage/*",
+    "*/migrations/*",
     "*/pytest_cache/*",
+    "*/scripts/*",
     "*/tests/*",
 ]
 
