Enhance Docker configuration and update .dockerignore
- Added additional entries to .dockerignore for better exclusion of unnecessary files.
- Updated Dockerfile to copy the 'uv' binary from the official distroless image.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,31 @@
-.git
-.venv
 __pycache__
-*.pyc
-.pytest_cache
 .coverage
-.env
-.env.local
-node_modules
+.cursor
 .DS_Store
+.env
+.env.example
+.env.local
+.envrc
+.git
+.gitattributes
+.github
+.gitignore
+.pytest_cache
+.python-version
+.ruff_cache
+.venv
+*.code-workspace
+*.pyc
+*.pyd
+*.pyo
+*.pyw
+*.pywz
+*.pyz
+*.pyzw
+CONTRIBUTING.md
+defaults.mk
+docker-compose.yml
+Makefile
+node_modules
+README.md
+TODO.md
