--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.41",
+    "structlog>=25.4.0",
 ]
 
 [dependency-groups]
