--- a/alembic.ini
+++ b/alembic.ini
@@ -103,38 +103,7 @@ ruff.type = exec
 ruff.executable = %(here)s/.venv/bin/ruff
 ruff.options = check --fix REVISION_SCRIPT_FILENAME
 
-# Logging configuration.  This is also consumed by the user-maintained
-# env.py script only.
-[loggers]
-keys = root,sqlalchemy,alembic
-
-[handlers]
-keys = console
-
-[formatters]
-keys = generic
-
-[logger_root]
-level = WARNING
-handlers = console
-qualname =
-
-[logger_sqlalchemy]
-level = WARNING
-handlers =
-qualname = sqlalchemy.engine
-
-[logger_alembic]
-level = INFO
-handlers =
-qualname = alembic
-
-[handler_console]
-class = StreamHandler
-args = (sys.stderr,)
-level = NOTSET
-formatter = generic
-
-[formatter_generic]
-format = %(levelname)-5.5s [%(name)s] %(message)s
-datefmt = %H:%M:%S
+# Logging configuration is now handled by cityhive.infrastructure.logging
+# for consistent structured JSON logging across the application.
+# Standard Python logging configuration sections removed in favor of
+# structured logging setup in migration/env.py
