Amend database configuration settings
- Updated .env.example to include new database connection pool settings: DB_POOL_TIMEOUT, DB_POOL_RECYCLE, DB_POOL_PRE_PING, and DB_ECHO.
- Renamed db_pool_overflow to db_max_overflow in config.py and adjusted related settings.
- Updated db.py to utilize new configuration parameters for database connection.
- Modified unit tests to reflect changes in configuration settings.

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,27 @@
 APP_HOST=127.0.0.1
 APP_PORT=8080
 
+#
 # Database Configuration
+#
+
+# Size of the connection pool
 DB_POOL_SIZE=5
-DB_POOL_OVERFLOW=10
+
+# Max extra connections
+DB_MAX_OVERFLOW=10
+
+# Seconds to wait before timing out on pool get
+DB_POOL_TIMEOUT=30
+
+# Recycle connections after N seconds
+DB_POOL_RECYCLE=1800
+
+# Check connection health
+DB_POOL_PRE_PING=true
+
+# Enable SQL logging
+DB_ECHO=false
 
 # Database connection URI
 # Use 'dialect[+driver]://user:password@host/dbname[?key=value..]' form.
