Add validation & request helpers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.41",
     "structlog>=25.4.0",
+    "emval>=0.1.5",
 ]
 
 [dependency-groups]
