--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
             fi
           done
           echo "PostgreSQL is ready"
+          docker compose logs cityhive_db
         env:
           APP_ENV: testing
 
