--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
           done
           echo "PostgreSQL is ready"
           docker compose logs cityhive_db
+          docker inspect cityhive_db
         env:
           APP_ENV: testing
 
