Preserve APP_ENV if set

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           # Wait for PostgreSQL to be ready
           echo "Waiting for PostgreSQL to be ready..."
           timeout=60
-          while ! docker compose exec -T cityhive_db pg_isready -U cityhive -d cityhive; do
+          while ! docker compose exec -T cityhive_db pg_isready -U cityhive -d cityhive_test; do
             sleep 2
             timeout=$((timeout - 2))
             if [ $timeout -le 0 ]; then
@@ -96,6 +96,10 @@ jobs:
           echo "PostgreSQL is ready"
           docker compose logs cityhive_db
           docker inspect cityhive_db
+          # Verify test database exists and has PostGIS enabled
+          echo "Verifying test database setup..."
+          docker compose exec -T cityhive_db psql -U cityhive -d cityhive_test -c "SELECT version();"
+          docker compose exec -T cityhive_db psql -U cityhive -d cityhive_test -c "SELECT PostGIS_Version();"
         env:
           POSTGRES_DB: cityhive_test
 
@@ -103,6 +107,7 @@ jobs:
         run: make migrate
         env:
           APP_ENV: testing
+          DATABASE_URI: postgresql+asyncpg://cityhive:cityhive@localhost:5432/cityhive_test
 
       - name: Run integration tests
         run: make test-integration
