Cleanup configuration logic

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ APP_HOST=127.0.0.1
 APP_PORT=8080
 
 #
+# Logging Configuration
+#
+
+# Set to true to force JSON logging
+LOG_FORCE_JSON=true
+
+#
 # Database Configuration
 #
 
