Setup test environment on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           # Wait for PostgreSQL to be ready
           echo "Waiting for PostgreSQL to be ready..."
           timeout=60
-          while ! docker compose exec -T cityhive_db pg_isready -U cityhive -d cityhive; do
+          while ! docker compose exec -T cityhive_db pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"; do
             sleep 2
             timeout=$((timeout - 2))
             if [ $timeout -le 0 ]; then
@@ -95,12 +95,20 @@ jobs:
           done
           echo "PostgreSQL is ready"
           sleep 2
+        env:
+          POSTGRES_DB: cityhive
+          POSTGRES_USER: cityhive
+          POSTGRES_PASSWORD: cityhive
 
       - name: Run database migrations
         run: make migrate
+        env:
+          DATABASE_URI: postgresql+asyncpg://cityhive:cityhive@cityhive-db:5432/cityhive
 
       - name: Run integration tests
         run: make test-integration
+        env:
+          DATABASE_URI: postgresql+asyncpg://cityhive:cityhive@cityhive-db:5432/cityhive
 
       - name: Stop PostgreSQL services
         if: always()
