--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "geoalchemy2>=0.17.1",
     "pydantic-settings>=2.9.1",
-    "pydantic>=2.11.5",
+    "pydantic[email]>=2.11.5",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.41",
