--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -11,6 +11,13 @@ on:
     workflows: ["CI"]
     types:
       - completed
+  # Manual trigger for testing
+  workflow_dispatch:
+    inputs:
+      pr_number:
+        description: "PR number to approve (for testing)"
+        required: false
+        type: string
 
 permissions:
   pull-requests: write
@@ -21,15 +28,28 @@ jobs:
     name: Auto-approve PR
     runs-on: ubuntu-latest
     # Only run if:
-    # 1. The triggering workflow succeeded
-    # 2. The original event was a pull request
+    # 1. The triggering workflow succeeded (for workflow_run)
+    # 2. The original event was a pull request (for workflow_run)
     # 3. The PR is not from a fork (security measure)
+    # OR this is a manual dispatch
     if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.head_repository.full_name == github.repository
+      github.event_name == 'workflow_dispatch' ||
+      (github.event.workflow_run.conclusion == 'success' &&
+       github.event.workflow_run.event == 'pull_request' &&
+       github.event.workflow_run.head_repository.full_name == github.repository)
 
     steps:
+      - name: Debug event context
+        run: |
+          echo "Event name: ${{ github.event_name }}"
+          echo "Repository: ${{ github.repository }}"
+          if [[ "${{ github.event_name }}" == "workflow_run" ]]; then
+            echo "Workflow run conclusion: ${{ github.event.workflow_run.conclusion }}"
+            echo "Workflow run event: ${{ github.event.workflow_run.event }}"
+            echo "Head repository: ${{ github.event.workflow_run.head_repository.full_name }}"
+            echo "Head branch: ${{ github.event.workflow_run.head_branch }}"
+          fi
+
       - name: Get PR number
         id: pr
         uses: actions/github-script@v7
@@ -37,6 +57,26 @@ jobs:
           script: |
             const core = require('@actions/core');
 
+            // Manual dispatch case
+            if (context.eventName === 'workflow_dispatch') {
+              const prNumber = context.payload.inputs.pr_number;
+              if (prNumber) {
+                const pr = await github.rest.pulls.get({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  pull_number: parseInt(prNumber)
+                });
+                console.log(`Manual test: Found PR #${pr.data.number}: ${pr.data.title}`);
+                core.setOutput('number', pr.data.number);
+                core.setOutput('url', pr.data.html_url);
+                return;
+              } else {
+                console.log('Manual dispatch without PR number - exiting');
+                return;
+              }
+            }
+
+            // workflow_run case
             const pulls = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
