--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,39 @@ jobs:
           env_vars: OS,PYTHON
           files: ./coverage/xml/coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
+
+  auto-approve:
+    name: Auto-approve PR
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      pull-requests: write
+    # Only run on pull requests, not pushes to main
+    # Also ensure we're not from a fork (security measure)
+    if: >
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.head.repo.full_name == github.repository
+
+    steps:
+      - name: Auto-approve pull request
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
+        run: |
+          gh pr review --approve "$PR_URL" --body "🤖 Auto-approved by @cicdbot - All CI tests passed successfully!"
+
+      - name: Add success comment
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
+        run: |
+          gh pr comment "$PR_URL" --body "🎉 **Auto-approval complete!**
+
+          All CI tests have passed successfully:
+          - ✅ Code formatting checks
+          - ✅ Linting
+          - ✅ Unit tests with coverage
+          - ✅ Integration tests
+          - ✅ Database migrations
+
+          This PR has been automatically approved by @cicdbot and is ready for merge."
