--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
 # CityHive Configuration Example
 # Copy this file to .env and modify the values as needed
 
+#
 # HTTP Server Configuration
+#
+
+# Host to bind the HTTP server to
 APP_HOST=127.0.0.1
+
+# Port to bind the HTTP server to
 APP_PORT=8080
 
 #
@@ -11,6 +17,14 @@ APP_PORT=8080
 
 # Set to true to force JSON logging
 LOG_FORCE_JSON=false
+
+# Log level
+# 10: DEBUG
+# 20: INFO
+# 30: WARNING
+# 40: ERROR
+# 50: CRITICAL
+LOG_LEVEL=20
 
 #
 # Database Configuration
