Enhance log level configuration to support string values and validation

--- a/.env.example
+++ b/.env.example
@@ -18,12 +18,12 @@ APP_PORT=8080
 # Set to true to force JSON logging
 LOG_FORCE_JSON=false
 
-# Log level
-# 10: DEBUG
-# 20: INFO
-# 30: WARNING
-# 40: ERROR
-# 50: CRITICAL
+# Possible values are strings or integers:
+# - 10, DEBUG, debug, Debug
+# - 20, INFO, info, Info
+# - 30, WARNING, warning, Warning
+# - 40, ERROR, error, Error
+# - 50, CRITICAL, critical, Critical
 LOG_LEVEL=20
 
 #
